fix: adjust scrollbar styles and ensure dialog display is consistent

--- a/src/app/(main)/main.css
+++ b/src/app/(main)/main.css
@@ -1,5 +1,9 @@
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   scrollbar-width: none;
+}
+
+dialog[open] {
+  display: block !important;
 }
 
 .productDialog {
@@ -28,10 +32,11 @@
   }
 }
 
-#products-slider{
-scrollbar-width: 10;
-scrollbar-color: rdd;
+#products-slider {
+  scrollbar-width: 10;
+  scrollbar-color: rdd;
 }
+
 #cartList {
   position: absolute;
   width: 100%;
@@ -45,23 +50,24 @@ scrollbar-color: rdd;
 }
 
 #basket {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    transition: box-shadow 0.5s ease-in-out;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.5s ease-in-out;
 }
 
 #basket.animate-basket {
-    box-shadow: 0 0 10px 10px rgba(34, 197, 94, 0.5);
+  box-shadow: 0 0 10px 10px rgba(34, 197, 94, 0.5);
 }
 
-#searchbar{
+#searchbar {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   transition: box-shadow 0.5s ease-in-out;
 
 }
 
 #searchbar.animate-searchbar {
-    box-shadow: 0 0 10px 10px rgba(34, 197, 94, 0.5);
+  box-shadow: 0 0 10px 10px rgba(34, 197, 94, 0.5);
 }
+
 @media screen and (min-width: 1024px) {
   #cartList {
     width: max-content;
@@ -70,11 +76,13 @@ scrollbar-color: rdd;
     top: 0;
     right: 0;
   }
+
   #cartList.openCart {
     right: 0;
     transform: translate(0);
   }
 }
+
 @property --border-angle {
   syntax: "<angle>";
   initial-value: 0deg;
@@ -99,6 +107,3 @@ scrollbar-color: rdd;
         border-box;
   border: 2px solid transparent;
 } */
-
-
-
